<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/popupBackground">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_recipe_conformation"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="?attr/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/delete_recipe_confirmation_button"
        app:layout_constraintStart_toStartOf="@+id/delete_recipe_popup_cancel_button"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/delete_recipe_popup_cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="133dp"
        android:layout_marginRight="133dp"
        android:background="@drawable/button_style"
        android:onClick="onDeleteRecipePopupCancelButtonPressed"
        android:text="@string/no"
        app:layout_constraintEnd_toStartOf="@+id/delete_recipe_confirmation_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textColor="?attr/buttonTextColor"/>

    <Button
        android:id="@+id/delete_recipe_confirmation_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:onClick="onDeleteRecipePopupConfirmationButtonPressed"
        android:text="@string/yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/delete_recipe_popup_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textColor="?attr/buttonTextColor"/>


</androidx.constraintlayout.widget.ConstraintLayout>