...
    <string name="directions">Directions</string>
    <string name="add_direction">Add Direction</string>
    <string name="categories">Categories</string>
    <string name="add_category">Add Category</string>
    <string name="enter_category">Enter Category</string>
    <string name="recipes">Recipes</string>
    <string name="okay">Okay</string>
    <string name="done">Done</string>
    <string name="finish">Finish</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="cancel">Cancel</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="favorite_recipe">Favorite Recipe</string>
    <string name="unfavorite_recipe">Unfavorite Recipe</string>
    <string name="share_recipe">Share Recipe</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="cart">Cart</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="filter_by">Filter By</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="servings">Servings</string>
    <string name="prep_time">Prep Time</string>
...
    <string name="quantity">Quantity</string>
    <string name="next">Next</string>
    <string name="enter_direction">Enter Direction</string>
    <string name="prep_time_min">Prep Time (minutes)</string>
    <string name="total_time_min">Total Time (minutes)</string>
    <string name="upload_image">Upload Image</string>
    <string name="scale_recipe">Scale Recipe</string>
    <string name="present_recipe">Present Recipe</string>
    <string name="convert_units">Convert Units</string>
    <string name="old_unit">Old Unit</string>
    <string name="new_unit">New Unit</string>
    <string name="delete_recipe_conformation">Are you sure you want to delete this recipe?</string>

    <string-array name="units_array">
        <item>teaspoon(s)</item>
        <item>tablespoon(s)</item>
        <item>cup(s)</item>
        <item>ounce(s)</item>
...
