<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <include android:id="@+id/main_toolbar"
        layout="@layout/main_toolbar"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipe_list_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        tools:listitem="@layout/recipe_list_item" />


...
