<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/popupBackground">

    <TextView
        android:id="@+id/scale_recipe_popup_servings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servings"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="?attr/primaryTextColor"
        android:gravity="center"
        android:paddingBottom="30dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scale_recipe_popup_remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@color/white"
        app:srcCompat="@drawable/ic_remove"
        app:layout_constraintTop_toBottomOf="@+id/scale_recipe_popup_servings_text"
        app:layout_constraintEnd_toStartOf="@id/scale_recipe_popup_servings_edit_text" />

    <EditText
        android:id="@+id/scale_recipe_popup_servings_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scale_recipe_popup_servings_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:backgroundTint="?attr/editTextColor"
        android:textColor="?attr/editTextColor"
        android:textColorHint="?attr/editTextColor"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scale_recipe_popup_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@drawable/ic_add"
        app:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@id/scale_recipe_popup_servings_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/scale_recipe_popup_servings_text" />

    <Button
        android:id="@+id/scale_recipe_popup_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scale_recipe_popup_remove_button"
        android:background="@drawable/button_style"
        android:onClick="onScaleRecipePopupCancelButtonPressed"/>

    <Button
        android:id="@+id/scale_recipe_popup_okay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:text="@string/okay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scale_recipe_popup_add_button"
        android:background="@drawable/button_style"
        android:onClick="onScaleRecipePopupOkayButtonPressed"/>

</androidx.constraintlayout.widget.ConstraintLayout>