<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/ingredient_check_box"
        android:layout_width="154dp"
        android:layout_height="60dp"
        android:text="@string/ingredient"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:buttonTint="@color/orange"
        android:textColor="?attr/secondaryTextColor"/>

    <TextView
        android:id="@+id/ingredient_quantity_text"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:text="quantity"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/ingredient_check_box"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="?attr/primaryTextColor"/>

    <TextView
        android:id="@+id/ingredient_unit_text"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:text="unit"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/ingredient_quantity_text"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="?attr/primaryTextColor"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="9dp"
        android:layout_margin="9dp"
        android:background="?attr/dividerColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredient_quantity_text" />

</androidx.constraintlayout.widget.ConstraintLayout>